# leetcoding

./: .clang-format  10_isMatch  10_isMatch.c  12_intToRoman  12_intToRoman.c  13_romanToInt  13_romanToInt.c  2_add_two_numbers.cpp  2_add_two_numbers.py  7_longestPalindrome  7_longestPalindrome.c  AddTwoList.java  CMakeLists.txt  CoinExchange2.java  ContainsDuplicate.java  DS_binary_tree.cpp  DS_linked_list.cpp  FindDuplicateNumber.java  HappyNumber.java  Knapsack.java  LinkedListCycle.java  LongestIncreasingSubsequence.java  MaxSubStrNoRep.java  NonOverlappingIntervals.java  RegularExpression.java  ThreeSum.java  ThreeSumClosest.java  WildcardMatching.java  a.out  dp_practice  dp_practice.c  test  test.c  wildcard_matching.java
0001-two-sum/: 0001-two-sum.py
0003-longest-substring-without-repeating-characters/: 0003-longest-substring-without-repeating-characters.py
0009-palindrome-number/: 0009-palindrome-number.py
0020-valid-parentheses/: 0020-valid-parentheses.py
0021-merge-two-sorted-lists/: 0021-merge-two-sorted-lists.py
0023-merge-k-sorted-lists/: 0023-merge-k-sorted-lists.py
0033-search-in-rotated-sorted-array/: 0033-search-in-rotated-sorted-array.py
0074-search-a-2d-matrix/: 0074-search-a-2d-matrix.py
0141-linked-list-cycle/: 0141-linked-list-cycle.py
0142-linked-list-cycle-ii/: 0142-linked-list-cycle-ii.py
0167-two-sum-ii-input-array-is-sorted/: 0167-two-sum-ii-input-array-is-sorted.py
0347-top-k-frequent-elements/: 0347-top-k-frequent-elements.py
0875-koko-eating-bananas/: 0875-koko-eating-bananas.py
135-candy/: 135-candy.java  (+1 more)
(+269 files in other folders)
